[package]
name = "deconz"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
futures-sink = "0.3"
packed_struct = "0.5.0"
slip-codec = { version = "0.2.4", features = ["async"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = { git = "git://github.com/mnbbrown/tokio-serial", branch = "master" } # Waiting for Tokio 1.0 update
tokio-util = "0.6"
tracing = "0.1"
tracing-subscriber = "0.2"
pretty-hex = "0.2"