
[package]
name = "deconz-cli"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
deconz = { path = "../deconz" }
hex = "0.4"
structopt = "0.3"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
