[package]
name = "deconz-cli"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
deconz = { path = "../deconz" }
futures = "0.3"
hex = "0.4"
structopt = "0.3"
tokio = { version = "1", features = [ "full" ] }
tonic = "0.6"
prost = "0.9"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.6"