[package]
name = "deconz"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
futures = "0.3"
futures-sink = "0.3"
packed_struct = "0.10.0"
pretty-hex = "0.2"
slip-codec = { version = "0.3", features = ["tokio-codec"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = "0.6"
tracing = "0.1"